added docker for a consistent dev enviroment

--- a/web/index.html
+++ b/web/index.html
@@ -340,7 +340,7 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <!-- WASM and Binding Scripts -->
-    <script src="js/nes_debugger.js"></script>
+    <script src="js/cpu_wasm.js"></script>
     <script src="js/bindings.js"></script>
 
     <!-- Application Scripts -->
