refactored disassembly section layout

--- a/web/index.html
+++ b/web/index.html
@@ -50,7 +50,7 @@
                     <i class="bi bi-cpu"></i>
                     <h2 class="section-title">Disassembly</h2>
                 </div>
-                <div id="disassemblyView" class="code-font">
+                <div id="disassemblyView" class="code-font" style="max-height: 500px; overflow-y: auto;">
                     <!-- Disassembled instructions will be shown here -->
                 </div>
             </div>
@@ -322,7 +322,6 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <!-- WASM and Binding Scripts -->
-    <script src="js/cpu_wasm.js"></script>
     <script src="js/bindings.js"></script>
 
     <!-- Application Scripts -->
