--- a/web/index.html
+++ b/web/index.html
@@ -87,20 +87,20 @@
                     <div class="tab-pane fade show active" id="controls" role="tabpanel" aria-labelledby="controls-tab">
                         <div class="mb-4">
                             <div class="btn-group d-flex mb-3">
-                                <button id="resetButton" class="btn btn-outline-secondary" data-bs-toggle="tooltip"
-                                    data-bs-placement="top" title="Reset CPU">
+                                <button id="resetButton" class="btn btn-outline-secondary" data-bs-placement="top"
+                                    title="Reset CPU">
                                     <i class="bi bi-arrow-counterclockwise"></i> Reset
                                 </button>
-                                <button id="runButton" class="btn btn-success" data-bs-toggle="tooltip"
-                                    data-bs-placement="top" title="Run Continuously">
+                                <button id="runButton" class="btn btn-success" data-bs-placement="top"
+                                    title="Run Continuously">
                                     <i class="bi bi-play-fill"></i> Run
                                 </button>
-                                <button id="stepButton" class="btn btn-info" data-bs-toggle="tooltip"
-                                    data-bs-placement="top" title="Execute One Instruction">
+                                <button id="stepButton" class="btn btn-info" data-bs-placement="top"
+                                    title="Execute One Instruction">
                                     <i class="bi bi-skip-forward"></i> Step
                                 </button>
-                                <button id="stopButton" class="btn btn-danger" data-bs-toggle="tooltip"
-                                    data-bs-placement="top" title="Stop Execution">
+                                <button id="stopButton" class="btn btn-danger" data-bs-placement="top"
+                                    title="Stop Execution">
                                     <i class="bi bi-stop-fill"></i> Stop
                                 </button>
                             </div>
