--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,6 @@
                 <div class="d-flex align-items-center">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 24 24' fill='none' stroke='%23007bff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect x='2' y='6' width='20' height='12' rx='2'/%3E%3Cline x1='2' y1='12' x2='22' y2='12'/%3E%3Cline x1='12' y1='18' x2='12' y2='12'/%3E%3Cline x1='6.5' y1='9' x2='6.5' y2='9'/%3E%3Cline x1='17.5' y1='9' x2='17.5' y2='9'/%3E%3C/svg%3E"
                         alt="NES Icon" class="me-3">
-                    <h1 class="mb-0 fw-med">6502 Debugger</h1>
                 </div>
                 <div class="d-flex align-items-center">
                     <div class="theme-toggle me-3" id="themeToggle" data-bs-toggle="tooltip" data-bs-placement="bottom"
@@ -125,7 +124,7 @@
                             </div>
                         </div>
 
-                        <div class="card bg-light">
+                        <div class="card ">
                             <div class="card-body">
                                 <div class="section-header mb-2">
                                     <i class="bi bi-graph-up"></i>
