refactored directory structure

--- a/web/index.html
+++ b/web/index.html
@@ -319,7 +319,7 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <!-- WASM and Binding Scripts -->
-    <script src="js/bindings.js"></script>
+    <script src="js/debugger.js"></script>
 
     <!-- Application Scripts -->
     <script src="js/ui.js"></script>
