Refactored js directory structure

--- a/web/index.html
+++ b/web/index.html
@@ -317,11 +317,11 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <!-- WASM and Binding Scripts -->
-    <script src="js/debugger.js"></script>
+    <script src="js/core/debugger.js"></script>
 
     <!-- Application Scripts -->
-    <script src="js/ui.js"></script>
-    <script src="js/theme.js"></script>
+    <script src="js/ui/debugger-ui.js"></script>
+    <script src="js/ui/theme.js"></script>
     <script src="js/main.js"></script>
 </body>
 
