--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,7 @@
     </style>
     <link rel="stylesheet" href="css/theme.css">
     <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/animations.css">
 </head>
 
 <body>
@@ -320,6 +321,7 @@
     <script src="js/core/debugger.js"></script>
 
     <!-- Application Scripts -->
+    <script src="js/ui/animations.js"></script>
     <script src="js/ui/debugger-ui.js"></script>
     <script src="js/ui/theme.js"></script>
     <script src="js/main.js"></script>
