Modified input example to fibonnaci series

--- a/web/index.html
+++ b/web/index.html
@@ -233,8 +233,10 @@
 
                             <div class="alert alert-secondary small">
                                 <strong><i class="bi bi-info-circle-fill me-1"></i> Example:</strong><br>
-                                <code class="d-block mt-1">A2 0A 8E 00 00 A2 03 8E 01 00 AC 00 00 A9 00 18 6D 01 00 88
-                                    D0 FA 8D 02 00 EA EA EA</code>
+                                <code class="d-block mt-1">A2 00 A9 00 95 20 E8 A9
+                                    01 95 20 E8 E0 0C F0 0A
+                                    B5 1F 18 75 1E 95 20 E8
+                                    90 F2 60</code>
                             </div>
                         </div>
                     </div>
