--- a/web/index.html
+++ b/web/index.html
@@ -27,11 +27,12 @@
                     <div class="theme-toggle me-3" id="themeToggle" data-bs-toggle="tooltip" data-bs-placement="bottom"
                         title="Toggle Theme">
                         <i class="bi bi-moon-stars-fill me-2"></i>
-                        <span>Dark Mode</span>
+                        <span class="d-none d-md-inline">Dark Mode</span>
                     </div>
                     <div class="btn-group">
                         <button id="loadRomButton" class="btn btn-primary">
-                            <i class="bi bi-file-earmark-binary me-2"></i>Load ROM
+                            <i class="bi bi-file-earmark-binary me-2"></i>
+                            <span class="d-none d-md-inline">Load ROM</span>
                         </button>
                         <button class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#helpModal">
                             <i class="bi bi-question-circle"></i>
@@ -252,7 +253,7 @@
                         <h2 class="section-title">Memory</h2>
                     </div>
                     <div class="d-flex gap-2 align-items-center">
-                        <div class="input-group" style="max-width: 200px;">
+                        <div class="input-group" style="max-width: 500px;">
                             <input type="text" id="memoryAddress" class="form-control" placeholder="Address (hex)">
                             <button id="jumpToAddressButton" class="btn btn-outline-primary">
                                 <i class="bi bi-arrow-right"></i>
