--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
         rel="stylesheet">
     <style>
     </style>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="css/theme.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/animations.css">
