--- a/web/index.html
+++ b/web/index.html
@@ -50,7 +50,7 @@
                     <i class="bi bi-cpu"></i>
                     <h2 class="section-title">Disassembly</h2>
                 </div>
-                <div id="disassemblyView" class="code-font" style="max-height: 500px; overflow-y: auto;">
+                <div id="disassemblyView" class="code-font" style="max-height: 500px; ">
                     <!-- Disassembled instructions will be shown here -->
                 </div>
             </div>
@@ -325,7 +325,6 @@
     <script src="js/core/debugger.js"></script>
 
     <!-- Application Scripts -->
-    <script src="js/ui/animations.js"></script>
     <script src="js/ui/debugger-ui.js"></script>
     <script src="js/ui/theme.js"></script>
     <script src="js/main.js"></script>
