--- a/web/index.html
+++ b/web/index.html
@@ -19,11 +19,30 @@
 <body>
     <div class="main-grid">
         <div class="header-area">
+            <div class="text-center small text-muted mb-2 d-md-none">
+                Developed by @Maxwell Knight
+            </div>
             <div class="panel d-flex align-items-center justify-content-between">
-                <div class="d-flex align-items-center">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 24 24' fill='none' stroke='%23007bff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect x='2' y='6' width='20' height='12' rx='2'/%3E%3Cline x1='2' y1='12' x2='22' y2='12'/%3E%3Cline x1='12' y1='18' x2='12' y2='12'/%3E%3Cline x1='6.5' y1='9' x2='6.5' y2='9'/%3E%3Cline x1='17.5' y1='9' x2='17.5' y2='9'/%3E%3C/svg%3E"
-                        alt="NES Icon" class="me-3">
+                <!-- Contact links for desktop -->
+                <div class="contact-links d-flex">
+                    <a href="https://github.com/MaxwellKnight/nes-emulator" class="btn btn-outline-secondary me-2"
+                        target="_blank" data-bs-toggle="tooltip" data-bs-placement="bottom" title="GitHub">
+                        <i class="bi bi-github"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/maxwell-knight/" class="btn btn-outline-secondary me-2"
+                        target="_blank" data-bs-toggle="tooltip" data-bs-placement="bottom" title="LinkedIn">
+                        <i class="bi bi-linkedin"></i>
+                    </a>
+                    <a href="mailto:maxwell.knight98@gmail.com" class="btn btn-outline-secondary" target="_blank"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom" title="Email">
+                        <i class="bi bi-envelope"></i>
+                    </a>
                 </div>
+
+                <div class="text-center small text-muted d-none d-md-block">
+                    Developed by @Maxwell Knight
+                </div>
+
                 <div class="d-flex align-items-center">
                     <div class="theme-toggle me-3" id="themeToggle" data-bs-toggle="tooltip" data-bs-placement="bottom"
                         title="Toggle Theme">
